--- a/solution/plugin_d3d12.vcxproj
+++ b/solution/plugin_d3d12.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_CommandQueue.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Device.h" />
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_Fence.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Graphics.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Mapping.h" />
@@ -111,6 +112,7 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_CommandQueue.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Device.cpp" />
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_Fence.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Graphics.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Mapping.cpp" />
