--- a/solution/plugin_d3d11.vcxproj
+++ b/solution/plugin_d3d11.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderState.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderTexture.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderWindow.h" />
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_StateMap.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h" />
   </ItemGroup>
   <ItemGroup>
