--- a/solution/plugin_d3d12.vcxproj
+++ b/solution/plugin_d3d12.vcxproj
@@ -98,12 +98,14 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Device.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Fence.h" />
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_FrameBuffer.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Graphics.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Mapping.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Pipeline.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Plugin.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Program.h" />
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_SwapChain.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Texture.h" />
   </ItemGroup>
   <ItemGroup>
@@ -113,12 +115,14 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Device.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Fence.cpp" />
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_FrameBuffer.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Graphics.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Plugin.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Program.cpp" />
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_SwapChain.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Texture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
