--- a/solution/plugin_ogl.vcxproj.filters
+++ b/solution/plugin_ogl.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="..\plugins\render_ogl\OGL_Program.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_ogl\OGL_SwapChain.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_ogl\OGL_Buffer.cpp">
@@ -108,6 +111,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\OGL_Program.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_ogl\OGL_SwapChain.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
