--- a/solution/plugin_vulkan.vcxproj.filters
+++ b/solution/plugin_vulkan.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -21,6 +21,9 @@
     <ClInclude Include="..\plugins\render_vulkan\VK_Device.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_vulkan\VK_FrameBuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_vulkan\VK_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -33,22 +36,19 @@
     <ClInclude Include="..\plugins\render_vulkan\VK_Plugin.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\VK_Texture.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\Vk_CommandQueue.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\VK_FrameBuffer.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\VK_SwapChain.h">
+    <ClInclude Include="..\plugins\render_vulkan\VK_Program.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_vulkan\VK_Shader.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\VK_Program.h">
+    <ClInclude Include="..\plugins\render_vulkan\VK_SwapChain.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_vulkan\VK_Texture.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_vulkan\Vk_CommandQueue.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -68,6 +68,9 @@
     <ClCompile Include="..\plugins\render_vulkan\VK_Device.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_vulkan\VK_FrameBuffer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_vulkan\VK_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -80,19 +83,16 @@
     <ClCompile Include="..\plugins\render_vulkan\VK_Plugin.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_vulkan\VK_Texture.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_vulkan\VK_FrameBuffer.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_vulkan\VK_SwapChain.cpp">
+    <ClCompile Include="..\plugins\render_vulkan\VK_Program.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_vulkan\VK_Shader.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_vulkan\VK_Program.cpp">
+    <ClCompile Include="..\plugins\render_vulkan\VK_SwapChain.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_vulkan\VK_Texture.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
