--- a/solution/plugin_d3d11.vcxproj.filters
+++ b/solution/plugin_d3d11.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -21,6 +21,9 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Device.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_FrameBuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -33,25 +36,22 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Plugin.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_Program.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderState.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_StateMap.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Shader.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_Program.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_FrameBuffer.h">
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_StateMap.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_SwapChain.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -68,6 +68,9 @@
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Device.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_FrameBuffer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -80,22 +83,19 @@
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Plugin.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderState.cpp">
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_Program.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_Texture.cpp">
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderState.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Shader.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_Program.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_FrameBuffer.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_SwapChain.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_Texture.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
