--- a/solution/plugin_d3d12.vcxproj.filters
+++ b/solution/plugin_d3d12.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -24,6 +24,12 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Device.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_Fence.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_FrameBuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -36,22 +42,16 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Plugin.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_Texture.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_Fence.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_FrameBuffer.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_SwapChain.h">
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_Program.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Shader.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_Program.h">
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_SwapChain.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_Texture.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -71,6 +71,12 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Device.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_Fence.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_FrameBuffer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -83,22 +89,16 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Plugin.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_Texture.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_Fence.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_FrameBuffer.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_SwapChain.cpp">
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_Program.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Shader.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_Program.cpp">
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_SwapChain.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_Texture.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
