--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -390,6 +390,9 @@
     <ClInclude Include="..\engine\src\xml\pugixml.hpp">
       <Filter>external</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\PluginMgr.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\engine\src\AABox.cpp">
@@ -655,6 +658,9 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\xml\pugixml.cpp">
       <Filter>external</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\PluginMgr.cpp">
+      <Filter>core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
