--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -247,7 +247,10 @@
       <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Plugin.h">
-      <Filter>engine</Filter>
+      <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\PluginMgr.h">
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Poller.h">
       <Filter>net</Filter>
@@ -389,9 +392,6 @@
     </ClInclude>
     <ClInclude Include="..\engine\src\xml\pugixml.hpp">
       <Filter>external</Filter>
-    </ClInclude>
-    <ClInclude Include="..\engine\include\PluginMgr.h">
-      <Filter>core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -560,6 +560,9 @@
     <ClCompile Include="..\engine\src\Playable.cpp">
       <Filter>render</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\src\PluginMgr.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
     <ClCompile Include="..\engine\src\Poller.cpp">
       <Filter>net</Filter>
     </ClCompile>
@@ -658,9 +661,6 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\xml\pugixml.cpp">
       <Filter>external</Filter>
-    </ClCompile>
-    <ClCompile Include="..\engine\src\PluginMgr.cpp">
-      <Filter>core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
