--- a/solution/engine.vcxproj
+++ b/solution/engine.vcxproj
@@ -301,6 +301,7 @@
     <ClCompile Include="..\engine\src\VertexLayout.cpp" />
     <ClCompile Include="..\engine\src\View.cpp" />
     <ClCompile Include="..\engine\src\Window.cpp" />
+    <ClCompile Include="..\engine\src\WindowMSW.cpp" />
     <ClCompile Include="..\engine\src\WorkQueue.cpp" />
     <ClCompile Include="..\engine\src\XMLFile.cpp" />
     <ClCompile Include="..\engine\src\xml\pugixml.cpp" />
