--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -661,6 +661,9 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\xml\pugixml.cpp">
       <Filter>external</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\WindowMSW.cpp">
+      <Filter>ui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
