--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -372,9 +372,6 @@
     <ClInclude Include="..\engine\include\Vector4.h">
       <Filter>math</Filter>
     </ClInclude>
-    <ClInclude Include="..\engine\include\VertexLayout.h">
-      <Filter>graphics</Filter>
-    </ClInclude>
     <ClInclude Include="..\engine\include\View.h">
       <Filter>render</Filter>
     </ClInclude>
@@ -644,13 +641,13 @@
     <ClCompile Include="..\engine\src\Variant.cpp">
       <Filter>core</Filter>
     </ClCompile>
-    <ClCompile Include="..\engine\src\VertexLayout.cpp">
-      <Filter>graphics</Filter>
-    </ClCompile>
     <ClCompile Include="..\engine\src\View.cpp">
       <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Window.cpp">
+      <Filter>ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\WindowMSW.cpp">
       <Filter>ui</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\WorkQueue.cpp">
@@ -661,9 +658,6 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\xml\pugixml.cpp">
       <Filter>external</Filter>
-    </ClCompile>
-    <ClCompile Include="..\engine\src\WindowMSW.cpp">
-      <Filter>ui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
