--- a/solution/plugin_d3d12.vcxproj
+++ b/solution/plugin_d3d12.vcxproj
@@ -99,7 +99,7 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Device.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Fence.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_FrameBuffer.h" />
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h" />
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_VertexLayout.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Mapping.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Pipeline.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Plugin.h" />
@@ -116,7 +116,7 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Device.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Fence.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_FrameBuffer.cpp" />
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp" />
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_VertexLayout.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Plugin.cpp" />
