--- a/solution/plugin_ogl.vcxproj
+++ b/solution/plugin_ogl.vcxproj
@@ -97,7 +97,6 @@
     <ClInclude Include="..\plugins\render_ogl\OGL_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Device.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_FrameBuffer.h" />
-    <ClInclude Include="..\plugins\render_ogl\OGL_InputLayout.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Mapping.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Pipeline.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Plugin.h" />
@@ -105,6 +104,7 @@
     <ClInclude Include="..\plugins\render_ogl\OGL_Shader.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_SwapChain.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Texture.h" />
+    <ClInclude Include="..\plugins\render_ogl\OGL_VertexArray.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glxew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h" />
@@ -115,7 +115,6 @@
     <ClCompile Include="..\plugins\render_ogl\OGL_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Device.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_FrameBuffer.cpp" />
-    <ClCompile Include="..\plugins\render_ogl\OGL_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Plugin.cpp" />
@@ -123,6 +122,7 @@
     <ClCompile Include="..\plugins\render_ogl\OGL_Shader.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_SwapChain.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Texture.cpp" />
+    <ClCompile Include="..\plugins\render_ogl\OGL_VertexArray.cpp" />
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
