--- a/solution/plugin_vulkan.vcxproj
+++ b/solution/plugin_vulkan.vcxproj
@@ -99,7 +99,7 @@
     <ClInclude Include="..\plugins\render_vulkan\VK_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_Device.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_FrameBuffer.h" />
-    <ClInclude Include="..\plugins\render_vulkan\VK_InputLayout.h" />
+    <ClInclude Include="..\plugins\render_vulkan\VK_VertexLayout.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_Mapping.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_Pipeline.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_Plugin.h" />
@@ -116,7 +116,7 @@
     <ClCompile Include="..\plugins\render_vulkan\VK_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Device.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_FrameBuffer.cpp" />
-    <ClCompile Include="..\plugins\render_vulkan\VK_InputLayout.cpp" />
+    <ClCompile Include="..\plugins\render_vulkan\VK_VertexLayout.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Plugin.cpp" />
