--- a/solution/plugin_vulkan.vcxproj.filters
+++ b/solution/plugin_vulkan.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -22,9 +22,6 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_vulkan\VK_FrameBuffer.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_vulkan\VK_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_vulkan\VK_Mapping.h">
@@ -51,6 +48,9 @@
     <ClInclude Include="..\plugins\render_vulkan\Vk_CommandQueue.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_vulkan\VK_VertexLayout.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_vulkan\VK_Buffer.cpp">
@@ -69,9 +69,6 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_vulkan\VK_FrameBuffer.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_vulkan\VK_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_vulkan\VK_Mapping.cpp">
@@ -93,6 +90,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_vulkan\VK_Texture.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_vulkan\VK_VertexLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
